# ep-micro-admin/controllers/votesController.ts
@@ -12,22 +12,19 @@ export const votesController = {
                 #swagger.tags = ['Votes']
                 #swagger.summary = 'List Votes'
                 #swagger.description = 'Endpoint to List Votes with pagination'
-                #swagger.parameters['query'] = {
-                    in: 'query',
-                    required: false,
-                    schema: {
-                        pageSize: 10,
-                        currentPage: 1,
-                        eventId: 'E1'
-                    }
-                }    
+                #swagger.parameters['Authorization'] = {
+                    in: 'header',
+                    required: true,
+                    type: 'string',
+                    description: 'Bearer token for authentication'
+                }
             */
-            const { pageSize = GridDefaultOptions.PAGE_SIZE, currentPage = GridDefaultOptions.CURRENT_PAGE, eventId } = req.query;
-            const votes = await votesService.listVotes(Number(pageSize), Number(currentPage), String(eventId));
+            const { pageSize = GridDefaultOptions.PAGE_SIZE, currentPage = GridDefaultOptions.CURRENT_PAGE, eventId = "" } = req.query;
+            const votes = await votesService.listVotes(Number(currentPage), Number(pageSize), String(eventId));
             const votesCount = await votesService.getVotesCount(String(eventId));
 
             return res.status(STATUS.OK).send({
-                data: { votes, votesCount },
+                data: { votes: votes || [], votesCount },
                 message: "Votes Fetched Successfully!"
             });
         } catch (error) {
@@ -41,26 +38,23 @@ export const votesController = {
                 #swagger.tags = ['Votes']
                 #swagger.summary = 'Get Nomination Votes'
                 #swagger.description = 'Endpoint to Get Nomination Votes with pagination'
-                #swagger.parameters['query'] = {
-                    in: 'query',
-                    required: false,
-                    schema: {
-                        pageSize: 10,
-                        currentPage: 1,
-                        eventId: 'N1'
-                    }
-                }    
+                #swagger.parameters['Authorization'] = {
+                    in: 'header',
+                    required: true,
+                    type: 'string',
+                    description: 'Bearer token for authentication'
+                }
             */
-            const { pageSize = GridDefaultOptions.PAGE_SIZE, currentPage = GridDefaultOptions.CURRENT_PAGE, eventId } = req.query;
+            const { pageSize = GridDefaultOptions.PAGE_SIZE, currentPage = GridDefaultOptions.CURRENT_PAGE, eventId = "" } = req.query;
             
             const eventExists = await eventsRepository.existsByEventId(String(eventId));
             if (!eventExists) return res.status(STATUS.NOT_FOUND).send(ERRORCODE.EVENTS.EVENTS001);
 
-            const votes = await votesService.getNomineeVotesByEvent(Number(pageSize), Number(currentPage), String(eventId));
+            const votes = await votesService.getNomineeVotesByEvent(Number(currentPage), Number(pageSize), String(eventId));
             const votesCount = await votesService.getNomineeVotesCountByEvent(String(eventId));
 
             return res.status(STATUS.OK).send({
-                data: { votes, votesCount },
+                data: { votes: votes || [], votesCount },
                 message: "Votes Fetched Successfully!"
             });
         } catch (error) {
